# psql-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/psql_mcp/: __init__.py  config.py  hardening.py  runner.py  server.py
templates/: config.example.json  psql-wrapper.sh
tests/: test_dsn.py  test_hardening.py
